Added ScoreboardHandler that keeps track of afk players and adds the prefix of "AFK" next to their name in the scoreboard

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,4 @@
+update-scoreboard-afk: true # Updates the scoreboard or tablist to show who is AFK
 send-chat-message-afk: true # Send chat message when one is considered AFK
 send-chat-message-return: true # Send chat message when one returns
 afk-seconds: 10 # Time it takes to be considered AFK (seconds)
